# deep-artha

./: .gitignore  README.md  docker-compose.yaml  main.py  mcp-example.json  pyproject.toml  setup.md
data/: apple_2024.xlsx  google_2024.xlsx
middlewares/: telebot_handler.py
src/: consts.py
src/database/: init.sql  postgres.py
src/telegram/: handlers.py
src/tools/: __init__.py  code_execution.py
src/tools/test/: test_code_execution.py
