[project]
name = "deep-artha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "e2b-code-interpreter>=2.8.0",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "psutil>=7.2.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "telebot>=0.0.5",
    "watchdog>=6.0.0",
]
